# ce-seminar-finder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily.yml  initialize-sheet.yml  pages-preview.yml  test.yml
data/: current-events-20260706.json
docs/: 01-requirements-and-issues.md  02-site-research.md  03-architecture-comparison.md  04-data-design.md  05-collection-ai-design.md  06-public-site-design.md  07-implementation-plan.md  08-phase1-setup.md  09-phase2-collection.md  10-phase3-extraction.md  11-phase4-review.md  12-phase5-site.md  13-phase6-operations.md
fixtures/: sample-events.json
gas/: Code.gs  Index.html  appsscript.json
site/: index.html
site/about/: index.html
site/archive/: index.html
site/assets/: app.js  styles.css
site/data/: events.json
site/events/: index.html
site/events/evt_01JPHASE100000000000000001/: index.html
src/ce_seminar_finder/: __init__.py  cli.py  enums.py  models.py  publisher.py  resolver.py  site_builder.py
src/ce_seminar_finder/adapters/: __init__.py  common.py  registry.py  sites.py
src/ce_seminar_finder/automation/: __init__.py  daily.py  lock.py
src/ce_seminar_finder/collection/: __init__.py  cache.py  fetcher.py  models.py  pipeline.py  rate_limit.py  repository.py  (+3 more)
tests/: test_adapters.py  test_automation.py  test_collection_core.py  test_extraction.py  test_gas_admin.py  test_pipeline.py  test_publisher.py  test_resolver.py  test_review.py  test_sheet_reader.py  test_sheet_schema.py  test_sheet_writer.py  test_site_builder.py
tools/: build_admin_template.mjs
(+29 files in other folders)
